--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "ress": "^2.0.4",
     "typescript": "^3.7.5"
   },
   "scripts": {
