--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "@snowpack/app-template-react-typescript",
-  "version": "1.2.0",
+  "name": "hubook-react",
   "license": "MIT",
-  "keywords": [
-    "csa-template"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "scripts": {
-    "start": "snowpack dev",
+    "start": "snowpack dev --open none",
     "build": "snowpack build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
-    "test": "jest"
+    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "react": "^16.13.0",
@@ -21,14 +14,10 @@
   },
   "devDependencies": {
     "@snowpack/app-scripts-react": "^1.2.0",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "jest": "^25.4.0",
     "prettier": "^2.0.0",
     "snowpack": "^2.5.0",
     "typescript": "^3.8.0"
-  },
-  "gitHead": "795f4311d79a70cc9f19f21b512b7f8675d73f17"
+  }
 }
