--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "prettier": "^2.0.0",
+    "ress": "^2.0.4",
     "snowpack": "^2.5.0",
     "typescript": "^3.8.0"
   }
