--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
+  "postcss": {
+    "plugins": {
+      "postcss-nesting": {}
+    }
+  },
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -18,6 +23,8 @@
     "@snowpack/app-scripts-react": "^1.2.0",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "postcss-cli": "^7.1.1",
+    "postcss-nesting": "^7.0.1",
     "prettier": "^2.0.5",
     "ress": "^2.0.4",
     "snowpack": "^2.5.2",
