--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "postcss": {
     "plugins": {
-      "postcss-nesting": {}
+      "postcss-nesting": {},
+      "postcss-custom-properties": {}
     }
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "postcss-cli": "^7.1.1",
+    "postcss-custom-properties": "^9.1.1",
     "postcss-nesting": "^7.0.1",
     "prettier": "^2.0.5",
     "ress": "^2.0.4",
