--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@snowpack/app-scripts-react": "^1.2.0",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "postcss-cli": "^7.1.1",
     "postcss-custom-properties": "^9.1.1",
     "postcss-nesting": "^7.0.1",
     "prettier": "^2.0.5",
+    "react-router-dom": "^5.2.0",
     "ress": "^2.0.4",
     "snowpack": "^2.5.2",
     "typescript": "^3.9.5"
