--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     }
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@mdi/js": "^5.3.45",
     "@mdi/react": "^1.4.0",
     "@octokit/graphql": "^4.5.2",
@@ -25,12 +23,16 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.4",
     "postcss-cli": "^7.1.1",
     "postcss-custom-properties": "^9.1.1",
     "postcss-nesting": "^7.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "ress": "^2.0.4",
     "snowpack": "^2.6.4",
+    "styled-components": "^5.2.0",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
