--- a/package.json
+++ b/package.json
@@ -3,39 +3,32 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "snowpack dev --open none",
-    "build": "snowpack build && sed -i -e \"s|/__snowpack__/|/hubook-react/__snowpack__/|\" build/_dist_/index.js",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
-  },
-  "postcss": {
-    "plugins": {
-      "postcss-nesting": {},
-      "postcss-custom-properties": {}
-    }
+    "dev": "node bundler.js dev",
+    "check": "tsc --noEmit",
+    "build": "npm run check && node bundler.js",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@mdi/js": "^5.3.45",
     "@mdi/react": "^1.4.0",
     "@octokit/graphql": "^4.5.2",
     "@octokit/rest": "^18.0.1",
-    "@snowpack/app-scripts-react": "^1.4.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.4",
-    "postcss-cli": "^7.1.1",
-    "postcss-custom-properties": "^9.1.1",
-    "postcss-nesting": "^7.0.1",
+    "esbuild": "^0.7.17",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "ress": "^2.0.4",
-    "snowpack": "^2.6.4",
     "styled-components": "^5.2.0",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "chokidar": "^3.4.3",
+    "livereload": "^0.9.1",
+    "prettier": "^2.0.5",
+    "sirv": "^1.0.7"
   }
 }
