--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,10 @@ jobs:
           version: 12.x
       - name: Install Dependencies
         run: npm ci --production
-      - name: Patch module
-        run: ./lib/patch.sh
       - name: Build pages
         run: npm run build
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: netlify/actions/cli@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NETLIFY_DIR: dist
