--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,15 @@
 name: build pages
 on:
   push:
-    branches:
-      - master
-      - ghactions/**
+    branches: master
+  pull_request:
 jobs:
   build:
+    deploy: &deploy_base
+      uses: netlify/actions/cli@master
+      env:
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,10 +21,13 @@ jobs:
         run: npm ci --production
       - name: Build pages
         run: npm run build
-      - name: Deploy
-        uses: netlify/actions/cli@master
+      - name: Deploy draft
+        if: github.event_name == 'pull_request'
+        <<: *deploy_base
         with:
           args: deploy --dir=dist
-        env:
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      - name: Deploy production
+        if: github.ref == 'refs/heads/master'
+        <<: *deploy_base
+        with:
+          args: deploy --dir=dist --prod
