--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: build pages
 on:
   push:
     branches: master
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,8 +16,19 @@ jobs:
         run: npm ci --production
       - name: Build pages
         run: npm run build
-      - name: Deploy
-        uses: netlify/actions/build@master
+      - name: Deploy draft
+        if: github.event_name == 'pull_request'
+        uses: netlify/actions/cli@master
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NETLIFY_DIR: dist
+          args: deploy --dir=dist
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      - name: Deploy production
+        if: github.ref == 'refs/heads/master'
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=dist --prod
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
