--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "node bundler.js dev",
     "check": "tsc --noEmit",
+    "build:css": "tailwindcss build src/styles.css -o src/index.css",
     "build": "npm run check && node bundler.js",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
@@ -21,8 +22,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "ress": "^3.0.0",
     "styled-components": "^5.2.0",
+    "tailwindcss": "^1.9.6",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
