--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
           version: 12.x
       - name: Install Dependencies
         run: npm ci --production
+      - name: Build css
+        run: npm run build:css
+        env:
+          NODE_ENV: production
       - name: Build pages
         run: npm run build
       - name: Deploy draft
