--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "node bundler.js dev",
     "check": "tsc --noEmit",
-    "build:css": "tailwindcss build src/styles.css -o src/index.css",
     "build": "npm run check && node bundler.js",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
@@ -18,6 +17,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "esbuild": "^0.7.17",
+    "postcss": "^8.1.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
