--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-node@v1.1.0
         with:
           version: 12.x
+      - name: fail
+        run: "false"
       - name: Install Dependencies
         run: npm ci --production
       - name: Build pages
