--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "@mdi/js": "^5.7.55",
+    "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.4.0",
-    "@octokit/graphql": "^4.5.6",
-    "@octokit/rest": "^18.0.6",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.6",
-    "esbuild": "^0.7.17",
-    "postcss": "^8.1.4",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-router-dom": "^5.2.0",
-    "tailwindcss": "^1.9.6",
-    "typescript": "^4.0.3"
+    "@octokit/graphql": "^4.6.1",
+    "@octokit/rest": "^18.5.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "chokidar": "^3.4.3",
-    "livereload": "^0.9.1",
-    "prettier": "^2.1.2",
-    "sirv": "^1.0.7"
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "chokidar": "^3.5.1",
+    "esbuild": "^0.11.0",
+    "livereload": "^0.9.3",
+    "postcss": "^8.2.8",
+    "prettier": "^2.2.1",
+    "sirv": "^1.0.11",
+    "tailwindcss": "^2.0.4",
+    "typescript": "^4.2.3"
   }
 }
